# TxtLogParser

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  TxtLogParser.desktop  app_icon.rc  icons.qrc
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows-self-host.yml  build-windows-self-hosted.yml  build-windows.yml  build.yml  release-windows.yml
icons/: app_icon.icns
src/bridge/: FileAdapter.cpp  FileAdapter.h  FilterAdapter.cpp  FilterAdapter.h  QtBridge.cpp  QtBridge.h  SearchAdapter.cpp  SearchAdapter.h
src/core/: AppUtils.cpp  AppUtils.h  ColorData.cpp  ColorData.h  DebugStream.cpp  DebugUtils.README.md  DebugUtils.h  DebugUtilsTest.cpp  FileData.cpp  FileData.h  FileSystem.h  FilterData.cpp  FilterData.h  FilterSearchColorManager.cpp  FilterSearchColorManager.h  JsonUtils.h  Logger.cpp  Logger.h  LoggerBridge.cpp  LoggerBridge.h  LoggingSystem.cpp  LoggingSystem.h  OutputData.cpp  OutputData.h  OutputLine.cpp  OutputLine.h  OutputWindow.cpp  OutputWindow.h  SearchData.cpp  SearchData.h  StringConverter.cpp  StringConverter.h  TimeUtils.h  TroubleshootingLogger.cpp  TroubleshootingLogger.h  WorkspaceData.cpp  WorkspaceData.h  WorkspaceManager.cpp  WorkspaceManager.h
src/ui/: StyleManager.cpp  StyleManager.h  main.cpp  mainwindow.cpp  mainwindow.h  workspace.cpp  workspace.h
src/ui/models/: fileinfo.cpp  fileinfo.h  filterconfig.cpp  filterconfig.h  qoutputline.h  searchconfig.cpp  searchconfig.h
src/ui/widgets/: filelistwidget.cpp  filelistwidget.h  filterlistwidget.cpp  filterlistwidget.h  outputdisplaywidget.cpp  outputdisplaywidget.h  searchlistwidget.cpp  searchlistwidget.h
src/utils/: GenericGuard.h
translations/: workspace.qrc  workspace_en.qm  workspace_en.ts  workspace_zh_CN.qm  workspace_zh_CN.ts
